--- a/css/main.css
+++ b/css/main.css
@@ -1196,7 +1196,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #5bdf83;
+  background: #c981cd;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
@@ -1442,6 +1442,7 @@ pre .javascript .function {
   color: #ff0000;
   display: inline-block;
   margin: 0 5px;
+  animation: iconAnimate 1.33s ease-in-out infinite;
 }
 .powered-by,
 .theme-info {
