--- a/css/main.css
+++ b/css/main.css
@@ -1196,7 +1196,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #c981cd;
+  background: #fffffb;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
