--- a/css/main.css
+++ b/css/main.css
@@ -1196,7 +1196,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #7ce286;
+  background: #e3adfb;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
