--- a/css/main.css
+++ b/css/main.css
@@ -1196,7 +1196,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #e52b65;
+  background: #1446c4;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
